# pqpake-python

./: .gitmodules  README.md  __init__.py  alice.py  bob.py  interlocutor.py  pyproject.toml  tests.py
cake/: alice.py  bob.py  interlocutor_cake.py
ideal_cipher/: __init__.py  ciphertext.py  compact_encoder.py  feistel.py  public_key.py
ocake/: alice.py  bob.py  interlocutor_ocake.py
